<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Copyright (C) 2013-2025 Federico Iosue (developer@omninotes.app)
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<com.getbase.floatingactionbutton.FloatingActionsMenu xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:fab="http://schemas.android.com/apk/res-auto"
  android:id="@+id/fab"
  android:layout_width="wrap_content"
  android:layout_height="wrap_content"
  android:layout_gravity="bottom|end"
  fab:fab_addButtonColorNormal="@color/colorAccent"
  fab:fab_addButtonColorPressed="@color/colorAccentPressed"
  fab:fab_addButtonPlusIconColor="@color/white"
  android:layout_marginBottom="8dp"
  android:layout_marginEnd="@dimen/fab_right_margin"
  android:visibility="invisible"
  fab:fab_labelsPosition="left"
  fab:fab_labelStyle="@style/fab_labels_style">

  <com.getbase.floatingactionbutton.FloatingActionButton
    android:id="@+id/fab_camera"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    fab:fab_icon="@drawable/camera_white"
    fab:fab_colorNormal="@color/action_color"
    fab:fab_colorPressed="@color/action_color_pressed"
    fab:fab_size="mini"
    fab:fab_title="@string/photo" />

  <com.getbase.floatingactionbutton.FloatingActionButton
    android:id="@+id/fab_checklist"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    fab:fab_icon="@drawable/checklist_white"
    fab:fab_colorNormal="@color/colorPrimary"
    fab:fab_colorPressed="@color/colorPrimaryDark"
    fab:fab_size="mini"
    fab:fab_title="@string/checklist" />

  <com.getbase.floatingactionbutton.FloatingActionButton
    android:id="@+id/fab_note"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    fab:fab_icon="@drawable/text_box_white"
    fab:fab_colorNormal="@color/colorAccent"
    fab:fab_colorPressed="@color/colorAccentPressed"
    android:visibility="gone"
    fab:fab_size="mini"
    fab:fab_title="@string/text_note" />

</com.getbase.floatingactionbutton.FloatingActionsMenu>
