...
                    android:id="@+id/tag_marker"
                    android:layout_width="10dp"
                    android:layout_height="match_parent"
                    android:background="@null" />

<!--                 <com.neopixl.pixlui.components.edittext.EditText -->
<!--                     android:id="@+id/detail_title" -->
<!--                     android:layout_width="match_parent" -->
<!--                     android:layout_height="wrap_content" -->
<!--                     android:background="@null" -->
<!--                     android:hint="@string/title" -->
<!--                     android:inputType="textCapSentences" -->
<!--                     android:linksClickable="false" -->
...
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="@dimen/padding_half" >

                        <com.neopixl.pixlui.components.edittext.EditText
                            android:id="@+id/detail_content"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="15dp"
                            android:background="@null"
                            android:hint="@string/content"
                            android:inputType="textCapSentences|textMultiLine"
...
