...
  <string name="archive">Archive</string>
  <string name="unarchive">Restore from archive</string>
  <string name="creation">Created:</string>
  <string name="last_update">Updated:</string>
  <string name="delete_note_confirmation">Confirm note deletion?</string>
  <string name="confirm">Confirm</string>
  <string name="ok">Ok</string>
  <string name="no">No</string>
  <string name="failed">failed</string>
  <string name="cancel">Cancel</string>
  <string name="note_updated">Note updated</string>
  <string name="empty_note_not_saved">Can\'t save an empty note</string>
  <string name="empty_note_not_shared">Can\'t share an empty note</string>
...
  <string name="note">Note</string>
  <string name="share_message_chooser">Share with</string>
  <string name="shared_content_sign">\n【by Omni Notes】</string>
  <string name="sort">Sort</string>
  <string name="select_sorting_column">Sort by</string>
  <string name="tap_to_undo">Tap to undo</string>
  <string name="alarm_set_on">Reminder set for</string>
  <string name="starting_from">starting from</string>
  <string name="at_time">at</string>
  <string name="discard_changes">Discard changes</string>
  <string name="attachment">Attachment</string>
  <string name="camera">Camera</string>
  <string name="delete_selected_image">Delete selected attachment?</string>
...
